<resources>
    <string name="app_name">Decibel</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="todo1">TODO</string>
    <string name="login1">Login</string>
    <string name="signup">SignUp</string>
    <string name="email2">Email</string>
    <string name="login2">Login</string>
    <string name="password2">Password</string>
    <string name="name1">Name</string>
    <string name="name2">Name</string>
    <string name="todo2">TODO</string>
    <string name="Name">Name</string>
    <string name="usernamer">Usernamer</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="hello1">Hello!</string>
    <string name="hello2">Hello!</string>
    <string name="hello3">Hello!</string>
    <string name="todo3">TODO</string>
    <string name="n">N</string>
    <string name="hi">Hi!</string>
    <string name="nan">nan</string>
    <string name="todo4">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="nametext">Nametext</string>
    <string name="emailtext">emailtext</string>
    <string name="our_playlist">Our Playlist,</string>
    <string name="todo">TODO</string>
    <string name="the_bootleg_boy_the_bootleg_boy_relaxing_chill_lofi_hip_hop_beats_for_sleeping_studying_sleepy_sad_beats_this_is_a_24_7_lofi_hip_hop_stream_from_the_bootleg_boy_channel_this_music_will_carry_on_forever_so_sit"><![CDATA[the bootleg boy. the bootleg boy. Relaxing & Chill lofi hip hop beats for sleeping/studying. 🎧 Sleepy/Sad Beats 🎧 This is a 24/7 lofi hip hop stream from the bootleg boy channel. This music will carry on forever so sit...]]></string>
    <string name="artist1">Artist1</string>
    <string name="audio1">Audio1</string>
    <string name="title_activity_long_session3">LongSession3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>