<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F319060C"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="379dp"
        android:layout_height="541dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email1"
                android:layout_width="324dp"
                android:layout_height="59dp"
                android:layout_marginTop="192dp"
                android:alpha="0.6"
                android:autofillHints=""
                android:background="@drawable/input_editor"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:hint="@string/email1"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toTopOf="@+id/password1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="@+id/name1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="324dp"
                android:layout_height="59dp"
                android:alpha="0.6"
                android:autofillHints=""
                android:background="@drawable/input_editor"
                android:drawableStart="@drawable/ic_baseline_lock_24"

                android:ems="10"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:textColor="#F3E3E3"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="@+id/email1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <Button
                android:id="@+id/Login1"
                android:layout_width="157dp"
                android:layout_height="57dp"
                android:layout_marginStart="96dp"
                android:layout_marginLeft="96dp"
                android:layout_marginEnd="96dp"
                android:layout_marginRight="96dp"
                android:alpha="0.5"
                android:background="@drawable/round_button"
                android:text="@string/login1"
                android:textAllCaps="false"
                android:textColor="#070606"
                android:textSize="20sp"
                app:backgroundTint="#4EF413"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.965" />

            <Button
                android:id="@+id/signup1"
                android:layout_width="223dp"
                android:layout_height="53dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:alpha="0.5"
                android:background="@drawable/round_button"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#0B0A0A"
                android:textSize="25sp"
                app:backgroundTint="#C61717"
                app:iconTint="#BF1B1B"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.779" />

            <EditText
                android:id="@+id/name1"
                android:layout_width="324dp"
                android:layout_height="59dp"
                android:alpha="0.6"
                android:autofillHints=""
                android:background="@drawable/input_editor"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.269" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hello1"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>