<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F319060C"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/Back_Arrow"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/email2"
                android:layout_width="324dp"
                android:layout_height="59dp"
                android:alpha="0.6"
                android:autofillHints=""
                android:background="@drawable/input_editor"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:hint="@string/email2"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#050404"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.357" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="324dp"
                android:layout_height="59dp"
                android:alpha="0.6"
                android:autofillHints=""
                android:background="@drawable/input_editor"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:textColorHint="#090808"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.57" />

            <Button
                android:id="@+id/button"
                android:layout_width="185dp"
                android:layout_height="69dp"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:alpha="0.8"
                android:background="@drawable/round_button"
                android:text="@string/login2"
                android:textAllCaps="false"
                android:textColor="#0C0C0C"
                android:textSize="32sp"
                app:backgroundTint="#9E7878"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.782" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="287dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="64dp"
                android:alpha="1"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#FAE119"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/Hello2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/hello3"
                android:textColor="#FFFEFE"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.124"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>