<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".driveactivity4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tuckername"
                android:layout_width="373dp"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="Study🤓"
                android:textAllCaps="false"
                android:textColor="#6A287E"
                android:textSize="25sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <ImageView
                android:id="@+id/driveimage4"
                android:layout_width="372dp"
                android:layout_height="317dp"
                android:layout_marginStart="39dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="39dp"
                android:contentDescription="@string/todo4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tuckername" />

            <TextView
                android:id="@+id/tuckerinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:gravity="center"
                android:text="Good study skills can increase your confidence, competence, and self-esteem. They can also reduce anxiety about tests and deadlines. ... Good study skills can improve your ability to learn and retain knowledge."
                android:textAllCaps="false"
                android:textColor="#EBFFE2"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driveimage4" />
            <Button
                android:id="@+id/shuffle"
                android:layout_width="190dp"
                android:layout_height="59dp"
                android:layout_marginStart="144dp"
                android:layout_marginLeft="144dp"
                android:layout_marginEnd="144dp"
                android:layout_marginRight="144dp"
                android:alpha="07"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="RandomPlay"
                android:textAllCaps="false"
                android:textColor="#1C0643"
                android:textSize="17sp"
                app:backgroundTint="#D10D0D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tuckerinfo" />
            <ListView
                android:id="@+id/drivelistog4"
                android:layout_width="match_parent"
                android:layout_height="1400dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shuffle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#1F1b24"
        android:orientation="horizontal"
        app:behavior_hideable="true"
        app:behavior_peekHeight="68dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:id="@+id/play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="256dp"
            android:layout_marginLeft="256dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />
        <ImageView
            android:id="@+id/pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="256dp"
            android:layout_marginLeft="256dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_baseline_pause_circle_outline_24" />

        <ImageView
            android:id="@+id/previous"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:layout_marginStart="208dp"
            android:layout_marginLeft="208dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_skip_next_24" />

        <TextView
            android:id="@+id/generalaudioname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="4dp"
            android:text="@string/audio1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarScrubber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generalartistname" />
        <SeekBar
            android:id="@+id/seekBarVolume"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarScrubber" />

        <TextView
            android:id="@+id/generalartistname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="3dp"
            android:text="@string/artist1"
            android:textAllCaps="false"
            android:textColor="	#FFFF00"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generalaudioname" />

        <TextView
            android:id="@+id/vloumenegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarVolume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarVolume" />
        <TextView
            android:id="@+id/volumetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="167dp"
            android:layout_marginLeft="167dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Volume"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/seekBarVolume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarVolume" />

        <TextView
            android:id="@+id/volumepostive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="360dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarVolume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarVolume" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>